# naver-smartstore-crawling

./: .gitignore  README.md  main.py  pyproject.toml
src/: crawling_stratege.py  utils.py
