[tool.poetry]
name = "crawling"
version = "0.1.0"
description = ""
authors = ["zsmalla <malla7454@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.10.0"
requests = "^2.31.0"
pandas = "^2.0.3"
webdriver-manager = "^3.8.6"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
ipykernel = "^6.24.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
